2015-10-21  Xie XiuQi  <xiexiuqi@huawei.com>

	* dmidecode.c: Handle SMBIOS 3.0 entry points on EFI systems.

2015-10-20  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Handle OEM-specific types in group associations
	  (DMI type 14).

2015-10-14  Jean Delvare  <jdelvare@suse.de>

	* util.c: Avoid SIGBUS on mmap failure.
	  This fixes Savannah bug #46066:
	  https://savannah.nongnu.org/bugs/?46066
	* util.c: Fix error paths in mem_chunk.

2015-10-01  Roy Franz  <roy.franz@linaro.org>

	* dmiopt.c: Add "--no-sysfs" option description to -h output.

2015-09-03  Jean Delvare  <jdelvare@suse.de>

	* version.h: Set version to 3.0.

2015-08-04  Tyler Bell  <tyler.bell@hp.com>

	* dmioem.c: Decode HP-specific DMI type 233
	* dmioem.c: Refactored HP-specific types 209 and 221 to use common code
	* dmioem.c: Documented spec for HP-specific types 209, 221 and 233

2015-05-21  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Fix up invalid DMI type 34 structure length.
	* dmioem.c: Decode HP-specific DMI types 212 and 219.
	* dmioem.c: Move function is_printable to dmidecode.c.

2015-05-13  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Add support for SMBIOS3 EFI table.
	* dmidecode.c: Fix warnings about comparison between signed and
	  unsigned integers.
	* util.c: Fix warnings about unused labels when building without
	  -DUSE_MMAP.
	* dmioem.c: Strip spaces at the end of vendor names.
	* dmioem.c: Decode Acer-specific DMI type 170.

2015-05-12  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Remove extra blank line after hidden DMI type 40
	  structure.

2015-05-04  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Move table decoding to a separate function.
	* dmidecode.c: Simplify function dmi_table_dump.
	* dmidecode.c: Display types 41 and 42 in quiet mode too.
	* dmidecode.c: Get OEM vendor from System Information (DMI type 1).

2015-04-28  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.h, dmiopt.h: Fix sparse errors.