@@ -1,3 +1,8 @@
+2015-11-02  Jean Delvare  <jdelvare@suse.de>
+
+	* dmidecode.c, util.c, util.h: Let read_file return the actual data
+	  size.
+
 2015-10-21  Xie XiuQi  <xiexiuqi@huawei.com>
 
 	* dmidecode.c: Handle SMBIOS 3.0 entry points on EFI systems.
